# file_d-attente

./: .gitignore  Cargo.toml  README.md  TODO.md  docker-compose.yml  flake.nix  rapport.tex
api/: Cargo.toml
api/src/: main.rs  metrics.rs  tag_api.rs  workers.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: types.rs
config/: grafana.ini  grafana_dashboard.json  prometheus.yml
data/: analysis.ipynb  data_simulator.py
data/results/: channels_dams_multi_param_runs.csv  channels_dams_multi_param_summary.csv  channels_dams_runs.csv  channels_dams_summary.csv  tb_sweep_runs_ING.csv  tb_sweep_summary_ING.csv  waterfall_jobs_seed42.csv  waterfall_metrics_seed42.csv  waterfall_runs.csv  waterfall_summary.csv
data/results/tables/: channels_dams_multi_param_summary.md  channels_dams_summary.md  channels_dams_tb_summary_ING.md  waterfall_cost_summary.csv  waterfall_cost_summary.md  waterfall_multi_param_summary.csv  waterfall_multi_param_summary.md  waterfall_summary.csv  waterfall_summary.md  waterfall_theory_vs_sim_table.csv  waterfall_theory_vs_sim_table.md
