[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
common = { version = "0.1.0", path = "../common" }
humantime = "2.3.0"
reqwest = { version = "0.12.27", default-features = false, features = ["json"] }
serde_json = "1.0.146"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
